Packed vertex format

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,18 @@ name = "gestalt"
 version = "0.0.1"
 authors = [ "Samuel Cutlip <gyro@zettabyte.ws>" ]
 
+[profile.dev]
+opt-level = 0      # controls the `--opt-level` the compiler builds with
+debug = true       # controls whether the compiler passes `-g`
+rpath = false      # controls whether the compiler passes `-C rpath`
+lto = false        # controls `-C lto` for binaries and staticlibs
+debug-assertions = true # controls whether debug assertions are enabled
+codegen-units = 1  # controls whether the compiler passes `-C codegen-units`
+                   # `codegen-units` is ignored when `lto = true`
+panic = 'unwind'   # panic strategy (`-C panic=...`), can also be 'abort'
+
 
 [dependencies]
-
 glium = "*"
 piston3d-gfx_voxel = "*"
 cgmath =  "0.10.0"
