Paletted VoxelStorage, also refactored voxel types to require Clone rather than Copy. (According to folks from IRC, Clone doesn't necessarily allocate, so performance impact should be negligable.)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ panic = 'unwind'   # panic strategy (`-C panic=...`), can also be 'abort'
 
 
 [dependencies]
+num = "*"
 glium = "*"
 piston3d-gfx_voxel = "*"
 cgmath =  "0.10.0"
