--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ panic = 'unwind'   # panic strategy (`-C panic=...`), can also be 'abort'
 
 
 [dependencies]
-num = "*"
+num = "0.1.37"
 time = "*"
 linear-map = { git = "https://github.com/contain-rs/linear-map" }
 cgmath = { git = "https://github.com/brendanzab/cgmath.git", rev = "3e6974b" }
@@ -29,5 +29,6 @@ specs = "0.8.1"
 glium = "*"
 image = "0.10.0"
 shader_version = "0.2.1"
+
 
 # conrod = "0.38.2"
