--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,13 +14,12 @@ codegen-units = 1  # controls whether the compiler passes `-C codegen-units`
                    # `codegen-units` is ignored when `lto = true`
 panic = 'unwind'   # panic strategy (`-C panic=...`), can also be 'abort'
 
-
 [dependencies]
 num = "0.1.37"
 time = "*"
 cgmath = { git = "https://github.com/brendanzab/cgmath.git", rev = "3e6974b" }
 
-serde = "1.0.2"
+serde = { version = "1.0.2", features = ["std"] }
 serde_yaml = "0.7.0"
 serde_derive = "1.0.2"
 
