--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,13 @@ version = "0.0.1"
 authors = ["gyro"]
 
 [dependencies]
-cgmath = { version = "0.16.1", features = [ "swizzle" ] }
+cgmath = { version = "0.17.0", features = [ "swizzle" ] }
 
 time = "0.1.42"
 rand = "0.7.2"
 noise = "0.6.0"
 fine_grained = "0.1.2"
-smallvec = "0.6.10"
+smallvec = "0.6.12"
 fnv = "1.0.6"
 
 parking_lot = "0.9.0"
@@ -23,13 +23,20 @@ string_cache = "0.8.0"
 clap = "2.33.0"
 linear-map = "1.2.0"
 
-serde = { version = "1.0.101", features = ["derive"] }
+serde = { version = "1.0.102", features = ["derive"] }
 serde_json = "1.0.41"
+toml = "0.5.4"
 
-winit = "0.20.0-alpha4"
-swsurface = "0.1.2"
 rgb = "0.8.14"
 hashbrown = "0.6.2"
+
+image = "0.22.3"
+vek = "0.9.9"
+winit = "0.20.0-alpha4"
+swsurface = "0.1.2"
+euc = "0.4.2"
+
+#tramp = "*"
 
 #TODO: Rewrite VoxelArray to use compile-time size.
 #typenum = "1.10.0"
@@ -37,4 +44,3 @@ hashbrown = "0.6.2"
 
 #vulkano = "0.10.0"
 #vulkano-shader-derive = "0.10.0"
-#image = "0.19.0"
