--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,15 +32,15 @@ hashbrown = "0.6.2"
 
 image = "0.22.3"
 vek = "0.9.9"
-winit = "0.20.0-alpha4"
+winit = "0.19.4"
 swsurface = "0.1.2"
 euc = "0.4.2"
+
+vulkano = "0.10.0"
+vulkano-shader-derive = "0.10.0"
 
 #tramp = "*"
 
 #TODO: Rewrite VoxelArray to use compile-time size.
 #typenum = "1.10.0"
 #generic-array = "0.13.2"
-
-#vulkano = "0.10.0"
-#vulkano-shader-derive = "0.10.0"
