fixed chunk meshing stutter

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,8 @@ euc = "0.4.2"
 vulkano = "0.10.0"
 vulkano-shader-derive = "0.10.0"
 
+#flame = "0.2.2"
+
 #tramp = "*"
 
 #TODO: Rewrite VoxelArray to use compile-time size.
