--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,10 +44,11 @@ winit = "0.19.4"
 swsurface = "0.1.2"
 euc = "0.4.2"
 
-vulkano = "0.10.0"
+vulkano = "0.16.0"
 vulkano-shader-derive = "0.10.0"
+rusttype = { version = "0.8.1", features = ["gpu_cache"] }
 
-#flame = "0.2.2"
+flame = "0.2.2"
 
 #tramp = "*"
 
