--- a/gestalt/Cargo.toml
+++ b/gestalt/Cargo.toml
@@ -43,6 +43,8 @@ rusttype = { version = "0.8.1", features = ["gpu_cache"] }
 
 flame = "0.2.2"
 
+xalloc = "0.2.6"
+
 #tramp = "*"
 
 #TODO: Rewrite VoxelArray to use compile-time size.
