Octrees stored in generational arenas to be more cache-friendly.

--- a/gestalt/Cargo.toml
+++ b/gestalt/Cargo.toml
@@ -26,24 +26,20 @@ linear-map = "1.2.0"
 
 serde = { version = "1.0.102", features = ["derive"] }
 serde_json = "1.0.41"
-toml = "0.5.4"
+toml = "0.5.5"
 
 rgb = "0.8.14"
-hashbrown = "0.6.2"
+hashbrown = "0.6.3"
 
 image = "0.22.3"
-vek = "0.9.9"
+vek = "0.9.10"
 winit = "0.19.4"
-swsurface = "0.1.2"
-euc = "0.4.2"
 
 vulkano = "0.16.0"
 vulkano-shaders = "0.16.0"
 rusttype = { version = "0.8.1", features = ["gpu_cache"] }
 
-flame = "0.2.2"
-
-#tramp = "*"
+generational-arena = { version = "0.2.6", features = ["serde"] }
 
 #TODO: Rewrite VoxelArray to use compile-time size.
 #typenum = "1.10.0"
