--- a/gestalt/Cargo.toml
+++ b/gestalt/Cargo.toml
@@ -16,7 +16,7 @@ fnv = "1.0.6"
 
 parking_lot = "0.9.0"
 crossbeam = "0.7.2"
-log = "0.4.8"
+# log = "0.4.8"
 chrono = "0.4.9"
 lazy_static = "1.4.0"
 num = "0.2.0"
@@ -45,6 +45,8 @@ flame = "0.2.2"
 
 xalloc = "0.2.6"
 half = "1.4.0"
+
+lumberjack = { path = "../lumberjack" }
 
 #tramp = "*"
 
