--- a/gestalt/Cargo.toml
+++ b/gestalt/Cargo.toml
@@ -41,6 +41,11 @@ rusttype = { version = "0.8.1", features = ["gpu_cache"] }
 
 generational-arena = { version = "0.2.6", features = ["serde"] }
 
+# ---- Crates used by network subsystem: ----
+sodiumoxide = "0.2"
+base16 = "0.2"
+
+
 #TODO: Rewrite VoxelArray to use compile-time size.
 #typenum = "1.10.0"
 #generic-array = "0.13.2"
