--- a/gestalt/Cargo.toml
+++ b/gestalt/Cargo.toml
@@ -11,11 +11,11 @@ time = "0.1.42"
 rand = "0.7.2"
 noise = "0.6.0"
 fine_grained = "0.1.2"
-smallvec = "0.6.12"
+smallvec = "1.0"
 fnv = "1.0.6"
 
 parking_lot = "0.9.0"
-crossbeam = "0.7.2"
+crossbeam-channel = "0.3"
 log = "0.4.8"
 chrono = "0.4.9"
 lazy_static = "1.4.0"
@@ -44,13 +44,14 @@ generational-arena = { version = "0.2.6", features = ["serde"] }
 # ---- Crates used by network subsystem: ----
 sodiumoxide = "0.2"
 base16 = "0.2"
-futures = "0.3"
-tokio = "0.1"
-quinn = "0.4"
+
+futures = "0.3.1"
+
+#tokio = "0.2.0-alpha.6"
+
 semver = "0.9"
-rcgen = "0.7"
-rustls = { version = "0.16", features = ["dangerous_configuration"] }
-webpki = "*"
+bincode = "1.2"
+laminar = "0.3"
 
 #TODO: Rewrite VoxelArray to use compile-time size.
 #typenum = "1.10.0"
