--- a/gestalt/Cargo.toml
+++ b/gestalt/Cargo.toml
@@ -43,6 +43,7 @@ clipboard = "0.5"
 lumberjack = { path = "../lumberjack" }
 phosphor = { path = "../phosphor" }
 toolbox = { path = "../toolbox" }
+make_names = { path = "../make_names" }
 
 #tramp = "*"
 
@@ -50,3 +51,6 @@ toolbox = { path = "../toolbox" }
 #typenum = "1.10.0"
 #generic-array = "0.13.2"
 
+[build-dependencies]
+walkdir = "2.2.9"
+regex = "1.3.1"
