--- a/gestalt/Cargo.toml
+++ b/gestalt/Cargo.toml
@@ -37,7 +37,10 @@ euc = "0.4.2"
 
 flame = "0.2.2"
 
-imgui = "0.2.1"
+# custom version with docking
+imgui = { path = "../imgui-rs" }
+# stable version
+# imgui = "0.2.1"
 clipboard = "0.5"
 
 lumberjack = { path = "../lumberjack" }
