--- a/gestalt/Cargo.toml
+++ b/gestalt/Cargo.toml
@@ -8,8 +8,11 @@ edition = "2018"
 hemlock = { path = "../hemlock" }
 
 anyhow = "1.0.32"
+bincode = "1.3.1"
 chrono = "0.4.15"
 crossbeam-channel = "0.4.3"
+custom_error = "1.7.1"
+enum_dispatch = "0.3.2"
 hashbrown = "0.8.2"
 kiss3d = "0.24.1"
 lazy_static = "1.4.0"
@@ -22,7 +25,7 @@ ron = "0.6.0"
 rusty_v8 = "0.8.1"
 serde = { version = "1.0.115", features = ["derive"] }
 time = "0.2.16"
-ustr = "0.7.0"
+ustr = { version = "0.7.0", features = ["serialization"] }
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
 
 #nphysics3d = "0.16.1"
