--- a/gestalt/Cargo.toml
+++ b/gestalt/Cargo.toml
@@ -9,12 +9,15 @@ hemlock = { path = "../hemlock" }
 
 anyhow = "1.0.32"
 bincode = "1.3.1"
+cgmath = "0.17.0"
 chrono = "0.4.15"
 crossbeam-channel = "0.4.3"
 custom_error = "1.7.1"
 enum_dispatch = "0.3.2"
+glium = "0.27.0"
+glutin = "0.24.1"
 hashbrown = "0.8.2"
-kiss3d = "0.24.1"
+image = "0.23.8"
 lazy_static = "1.4.0"
 log = { version = "0.4.11", features = ["std"] }
 nalgebra = "0.21.1"
