--- a/gestalt/Cargo.toml
+++ b/gestalt/Cargo.toml
@@ -9,6 +9,7 @@ hemlock = { path = "../hemlock" }
 
 anyhow = "1.0.32"
 bincode = "1.3.1"
+byteorder = "1.3.4"
 cgmath = "0.17.0"
 chrono = "0.4.15"
 crossbeam-channel = "0.4.3"
@@ -26,6 +27,7 @@ parking_lot = "0.11.0"
 rand = "0.7"
 ron = "0.6.0"
 rusty_v8 = "0.8.1"
+semver = "0.10.0"
 serde = { version = "1.0.115", features = ["derive"] }
 time = "0.2.16"
 ustr = { version = "0.7.0", features = ["serialization"] }
