--- a/gestalt/Cargo.toml
+++ b/gestalt/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 hemlock = { path = "../hemlock" }
 
 anyhow = "1.0.32"
+arr_macro = "0.1.3"
 bincode = "1.3.1"
 byteorder = "1.3.4"
 cgmath = "0.17.0"
@@ -29,7 +30,6 @@ ron = "0.6.0"
 rusty_v8 = "0.8.1"
 semver = "0.10.0"
 serde = { version = "1.0.115", features = ["derive"] }
-time = "0.2.16"
 ustr = { version = "0.7.0", features = ["serialization"] }
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
 
