--- a/gestalt/Cargo.toml
+++ b/gestalt/Cargo.toml
@@ -28,6 +28,7 @@ num = "0.3.0"
 parking_lot = "0.11.0"
 rand = "0.7"
 ron = "0.6.1"
+rusty_v8 = "0.12.0"
 semver = "0.10.0"
 serde = { version = "1.0.115", features = ["derive"] }
 snow = "0.7.2"
