--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,15 @@
 [package]
 name = "gestalt"
 version = "0.0.1"
-authors = ["Sam 'Gyro' C. <gyrocoder@gmail.com>", "trashbyte"]
+authors = ["Emily 'Gyro' C. <gyrocoder@gmail.com>", "trashbyte"]
 edition = "2018"
 
 [dependencies]
 byteorder = "1.3.4"
 cgmath = "0.18.0"
-clap = "2.33.3"
 crossbeam-channel = "0.5.0"
 custom_error = "1.8.0"
-futures = "0.3.6"
 hashbrown = "0.11.2"
-hecs = "0.6.5"
-# image = "0.23.8"
 lazy_static = "1.4.0"
 log = "0.4.11"
 num = "0.4.0"
@@ -21,8 +17,16 @@ parking_lot = "0.11.0"
 rand = "0.8.4"
 semver = "1.0.4"
 serde = { version = "1.0.108", features = ["derive"] }
-snow = "0.8"
 simplelog = "0.10.2"
-sodiumoxide = "0.2.6"
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
-winit = "0.25"
+#winit = "0.25"
+
+# Scripting
+wasmtime = "0.30.0"
+
+# Image loading
+# image = "0.23.8"
+
+# Possible options for cryptography... 
+# snow = "0.8"
+# sodiumoxide = "0.2.6"
