--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ byteorder = "1.3.4"
 cgmath = "0.18.0"
 crossbeam-channel = "0.5.0"
 custom_error = "1.8.0"
-hashbrown = "0.11.2"
+hashbrown = { version = "0.11.2", features = ["serde"] } 
 lazy_static = "1.4.0"
 log = "0.4.11"
 num = "0.4.0"
