--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -5,25 +5,28 @@ authors = ["Emily 'Gyro' C. <gyrocoder@gmail.com>", "trashbyte"]
 edition = "2018"
 
 [dependencies]
+base64 = "0.13.0"
 byteorder = "1.3.4"
-crossbeam-channel = "0.5.0"
-custom_error = "1.8.0"
-hashbrown = { version = "0.11.2", features = ["serde"] } 
-hecs = "0.7.3"
+crossbeam-channel = "0.5.2"
+hashbrown = { version = "0.11.2", features = ["serde"] }
 lazy_static = "1.4.0"
 log = "0.4.11"
 num = "0.4.0"
 parking_lot = "0.11.0"
 rand = "0.8.4"
-semver = "1.0.4"
+rmp = "0.8.10"
+rmp-serde = "0.15.5"
 serde = { version = "1.0.108", features = ["derive"] }
 sha2 = "0.10.1"
+shipyard = {version = "0.5.0", features = ["parallel", "serde1"]}
 simplelog = "0.11"
+string_cache = "0.8"
+thiserror = "1.0.30"
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
 #winit = "0.25"
 
 # Scripting
-mlua = { version = "0.7.1", features = ["lua52"] }
+mlua = { version = "0.7.1", features = ["luajit", "luajit52", "vendored", "serialize"] }
 
 # Image loading
 # image = "0.23.8"
@@ -31,3 +34,6 @@ mlua = { version = "0.7.1", features = ["lua52"] }
 # Possible options for cryptography... 
 # snow = "0.8"
 # sodiumoxide = "0.2.6"
+
+# Delete this later, just for early testing
+rustyline = "9.1.2"
