--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -22,6 +22,7 @@ shipyard = {version = "0.5.0", features = ["parallel", "serde1"]}
 simplelog = "0.11"
 string_cache = "0.8"
 thiserror = "1.0.30"
+toml = "0.5.8"
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
 #winit = "0.25"
 
