--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -32,8 +32,7 @@ uuid = { version = "0.8.1", features = ["serde", "v4"] }
 mlua = { version = "0.7.1", features = ["luajit", "luajit52", "vendored", "serialize"] }
 
 # Rendering 
-rend3 = "0.2.3"
-rend3-pbr = "0.2.2"
+wgpu = "0.12.0"
 winit = "0.26.1"
 
 # Image loading
