--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 base64 = "0.13.0"
 byteorder = "1.3.4"
 crossbeam-channel = "0.5.2"
-glam = {version = "0.19.0", features = ["serde", "rand"]}
-hashbrown = { version = "0.11.2", features = ["serde"] }
+glam = {version = "0.20.2", features = ["serde", "rand"]}
+hashbrown = { version = "0.12.0", features = ["serde"] }
 lazy_static = "1.4.0"
 log = "0.4.11"
 num = "0.4.0"
@@ -17,7 +17,7 @@ parking_lot = "0.11.0"
 pollster = "0.2.1" # Provides `block_on()` to wait for futures from sync code
 rand = "0.8.4"
 rmp = "0.8.10"
-rmp-serde = "0.15.5"
+rmp-serde = "1.0.0"
 ron = "0.7.0"
 serde = { version = "1.0.108", features = ["derive"] }
 sha2 = "0.10.1"
@@ -32,8 +32,12 @@ uuid = { version = "0.8.1", features = ["serde", "v4"] }
 mlua = { version = "0.7.1", features = ["luajit", "luajit52", "vendored", "serialize"] }
 
 # Rendering 
-wgpu = "0.12.0"
+rend3 = { git = "https://github.com/BVE-Reborn/rend3", rev = "c42f758d07e1d9c650d2d5239527bd97f7111cb8" }
+rend3-routine = { git = "https://github.com/BVE-Reborn/rend3", rev = "c42f758d07e1d9c650d2d5239527bd97f7111cb8" }
+wgpu = "0.12"
 winit = "0.26.1"
+profiling = {version = "1", features = ["profile-with-tracy"] }
+tracing-tracy = "0.8.0"
 
 # Image loading
 # image = "0.23.8"
