--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 base64 = "0.13.0"
 byteorder = "1.3.4"
 crossbeam-channel = "0.5.2"
+futures = "0.3.19"
 glam = {version = "0.20.2", features = ["serde", "rand"]}
 hashbrown = { version = "0.12.0", features = ["serde"] }
 lazy_static = "1.4.0"
@@ -42,7 +43,8 @@ winit = "0.26.1"
 #tracing-tracy = "0.8.0"
 
 # Image loading
-# image = "0.23.8"
+image = "0.23.8"
+texture_packer = "0.23.1"
 
 # Possible options for cryptography... 
 # snow = "0.8"
