--- a/gestalt-core/Cargo.toml
+++ b/gestalt-core/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 
 [dependencies]
 base64 = "0.13.0"
+bimap = { version = "0.6.2", features = ["serde"] }
 byteorder = "1.3.4"
 crossbeam-channel = "0.5.2"
 futures = "0.3.19"
