--- a/gestalt-core/Cargo.toml
+++ b/gestalt-core/Cargo.toml
@@ -15,9 +15,10 @@ hashbrown = { version = "0.12.0", features = ["serde"] }
 lazy_static = "1.4.0"
 log = "0.4.11"
 num = "0.4.0"
-parking_lot = "0.11.0"
+parking_lot = "0.12.0"
 pollster = "0.2.1" # Provides `block_on()` to wait for futures from sync code
-rand = "0.8.4"
+rand = "0.7"
+rand_core = "0.5"
 rmp = "0.8.10"
 rmp-serde = "1.0.0"
 ron = "0.7.0"
@@ -35,7 +36,7 @@ uuid = { version = "0.8.1", features = ["serde", "v4"] }
 # Scripting
 mlua = { version = "0.7.1", features = ["luajit", "luajit52", "vendored", "serialize"] }
 
-# Rendering 
+# Rendering
 rend3 = { version = "^0.2.0", git = "https://github.com/BVE-Reborn/rend3", rev = "c42f758d07e1d9c650d2d5239527bd97f7111cb8" }
 rend3-routine = { version = "^0.2.0", git = "https://github.com/BVE-Reborn/rend3", rev = "c42f758d07e1d9c650d2d5239527bd97f7111cb8" }
 wgpu = { version = "0.12", features = ["spirv"] }
@@ -48,5 +49,9 @@ image = "0.23.8"
 texture_packer = "0.23.1"
 
 # Possible options for cryptography... 
+ed25519-dalek = { version = "1.0.1", features = ["serde", "alloc"]}
+ed25519 = { version = "1.3.0", features = ["alloc", "pem", "serde_bytes"] }
+pkcs8 = { version = "0.8.0", features = ["alloc", "encryption", "pem", "rand", "std"]}
+spki = "0.5.4"
 # snow = "0.8"
 # sodiumoxide = "0.2.6"
