--- a/gestalt-core/Cargo.toml
+++ b/gestalt-core/Cargo.toml
@@ -5,9 +5,13 @@ authors = ["Emily 'Gyro' C. <gyrocoder@gmail.com>", "trashbyte"]
 edition = "2021"
 
 [dependencies]
+
+gestalt_logger = { path = "../gestalt-logger" }
+
 base64 = "0.13.0"
 bimap = { version = "0.6.2", features = ["serde"] }
 byteorder = "1.3.4"
+chrono = "0.4.19"
 crossbeam-channel = "0.5.2"
 futures = "0.3.19"
 glam = {version = "0.20.2", features = ["serde", "rand"]}
