--- a/gestalt-core/Cargo.toml
+++ b/gestalt-core/Cargo.toml
@@ -23,6 +23,7 @@ rmp = "0.8.10"
 rmp-serde = "1.0.0"
 ron = "0.7.0"
 serde = { version = "1.0.108", features = ["derive"] }
+serde_json = "1.0.79"
 sha2 = "0.10.1"
 shipyard = {version = "0.5.0", features = ["parallel", "serde1"]}
 #simplelog = "0.11.2"
@@ -31,7 +32,8 @@ string_cache = "0.8"
 thiserror = "1.0.30"
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
 
-#bytemuck = "1.7.3"
+# Network
+laminar = "0.5.0" 
 
 # Scripting
 mlua = { version = "0.7.1", features = ["luajit", "luajit52", "vendored", "serialize"] }
@@ -49,9 +51,10 @@ image = "0.23.8"
 texture_packer = "0.23.1"
 
 # Possible options for cryptography... 
-ed25519-dalek = { version = "1.0.1", features = ["serde", "alloc"]}
+curve25519-dalek = { version = "3.2.1", features = ["alloc"]}
+ed25519-dalek = { version = "1.0.1", features = ["serde", "alloc", "batch"]}
 ed25519 = { version = "1.3.0", features = ["alloc", "pem", "serde_bytes"] }
 pkcs8 = { version = "0.8.0", features = ["alloc", "encryption", "pem", "rand", "std"]}
 spki = "0.5.4"
-# snow = "0.8"
+snow = "0.9"
 # sodiumoxide = "0.2.6"
