--- a/gestalt-core/Cargo.toml
+++ b/gestalt-core/Cargo.toml
@@ -26,7 +26,7 @@ serde = { version = "1.0.108", features = ["derive"] }
 serde_json = "1.0.79"
 sha2 = "0.10.1"
 shipyard = {version = "0.5.0", features = ["parallel", "serde1"]}
-#simplelog = "0.11.2"
+simplelog = "0.11.2"
 string_cache = "0.8"
 #tar = "0.4.38"
 thiserror = "1.0.30"
@@ -50,11 +50,11 @@ winit = "0.26.1"
 image = "0.23.8"
 texture_packer = "0.23.1"
 
-# Possible options for cryptography... 
-curve25519-dalek = { version = "3.2.1", features = ["alloc"]}
+# Possible options for cryptography...
 ed25519-dalek = { version = "1.0.1", features = ["serde", "alloc", "batch"]}
 ed25519 = { version = "1.3.0", features = ["alloc", "pem", "serde_bytes"] }
 pkcs8 = { version = "0.8.0", features = ["alloc", "encryption", "pem", "rand", "std"]}
 spki = "0.5.4"
 snow = "0.9"
+signature = "1.5.0"
 # sodiumoxide = "0.2.6"
