--- a/gestalt-core/Cargo.toml
+++ b/gestalt-core/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 
 [dependencies]
 base64 = "0.13.0"
-bimap = { version = "0.6.2", features = ["serde"] }
-byteorder = "1.3.4"
+#bimap = { version = "0.6.2", features = ["serde"] }
+#byteorder = "1.3.4"
 chrono = "0.4.19"
 crossbeam-channel = "0.5.2"
 futures = "0.3.19"
@@ -31,7 +31,7 @@ simplelog = "0.11.2"
 string_cache = "0.8"
 #tar = "0.4.38"
 thiserror = "1.0.30"
-uuid = { version = "0.8.1", features = ["serde", "v4"] }
+uuid = { version = "1.0.0", features = ["serde", "v4"] }
 
 # Network
 laminar = "0.5.0" 
@@ -48,14 +48,12 @@ winit = "0.26.1"
 #tracing-tracy = "0.8.0"
 
 # Image loading
-image = "0.23.8"
-texture_packer = "0.23.1"
+image = "0.24.1"
 
 # Possible options for cryptography...
 ed25519-dalek = { version = "1.0.1", features = ["serde", "alloc", "batch"]}
 ed25519 = { version = "1.3.0", features = ["alloc", "pem", "serde_bytes"] }
 pkcs8 = { version = "0.8.0", features = ["alloc", "encryption", "pem", "rand", "std"]}
-spki = "0.5.4"
 snow = "0.9"
 signature = "1.5.0"
 # sodiumoxide = "0.2.6"
