--- a/gestalt-core/Cargo.toml
+++ b/gestalt-core/Cargo.toml
@@ -35,6 +35,7 @@ uuid = { version = "1.0.0", features = ["serde", "v4"] }
 
 # Network
 laminar = "0.5.0" 
+tokio = { version = "1", features = ["sync", "rt", "net"] }
 
 # Scripting
 mlua = { version = "0.7.1", features = ["luajit", "luajit52", "vendored", "serialize"] }
