--- a/gestalt-core/Cargo.toml
+++ b/gestalt-core/Cargo.toml
@@ -10,6 +10,7 @@ base64 = "0.13.0"
 #byteorder = "1.3.4"
 chrono = "0.4.19"
 crossbeam-channel = "0.5.2"
+enum_variant_macros = "0.2.0"
 futures = "0.3.19"
 glam = {version = "0.20.2", features = ["serde", "rand"]}
 hashbrown = { version = "0.12.0", features = ["serde"] }
@@ -26,7 +27,6 @@ ron = "0.7.0"
 serde = { version = "1.0.108", features = ["derive"] }
 serde_json = "1.0.79"
 sha2 = "0.10.1"
-shipyard = {version = "0.5.0", features = ["parallel", "serde1"]}
 simplelog = "0.11.2"
 string_cache = "0.8"
 #tar = "0.4.38"
@@ -35,7 +35,7 @@ uuid = { version = "1.0.0", features = ["serde", "v4"] }
 
 # Network
 laminar = "0.5.0" 
-tokio = { version = "1", features = ["sync", "rt", "net"] }
+tokio = { version = "1", features = ["sync", "rt", "net", "io-util", "macros"] }
 
 # Scripting
 mlua = { version = "0.7.1", features = ["luajit", "luajit52", "vendored", "serialize"] }
