--- a/gestalt-core/Cargo.toml
+++ b/gestalt-core/Cargo.toml
@@ -35,7 +35,7 @@ uuid = { version = "1.0.0", features = ["serde", "v4"] }
 vu64 = "0.1.5"
 
 # Network
-laminar = "0.5.0" 
+laminar = { version = "0.5.1", git = "https://github.com/NotGyro/laminar", rev = "6c73dcf058432d1327558bb8bbbd245a5feaad94" } 
 tokio = { version = "1.18", features = ["full", "sync", "rt", "rt-multi-thread", "net", "io-util", "macros", "time"] }
 
 # Scripting
