--- a/gestalt-core/Cargo.toml
+++ b/gestalt-core/Cargo.toml
@@ -5,11 +5,15 @@ authors = ["Emily 'Gyro' C. <gyrocoder@gmail.com>", "trashbyte"]
 edition = "2021"
 
 [dependencies]
-base64 = "0.13.0"
+#Internal
+gestalt_names = { path = "../gestalt-names" }
+
+# External
+#pollster = "0.2.1" # Provides `block_on()` to wait for futures from sync code
 #bimap = { version = "0.6.2", features = ["serde"] }
 #byteorder = "1.3.4"
+# crossbeam-channel = "0.5.2"
 chrono = "0.4.19"
-crossbeam-channel = "0.5.2"
 enum_variant_macros = "0.2.0"
 futures = "0.3.19"
 glam = {version = "0.20.2", features = ["serde", "rand"]}
@@ -18,7 +22,6 @@ lazy_static = "1.4.0"
 log = "0.4.11"
 num = "0.4.0"
 parking_lot = "0.12.0"
-pollster = "0.2.1" # Provides `block_on()` to wait for futures from sync code
 rand = "0.7"
 rand_core = "0.5"
 rmp = "0.8.10"
@@ -27,10 +30,13 @@ ron = "0.7.0"
 serde = { version = "1.0.108", features = ["derive"] }
 serde_json = "1.0.79"
 sha2 = "0.10.1"
-simplelog = "0.11.2"
 string_cache = "0.8"
-#tar = "0.4.38"
 thiserror = "1.0.30"
+
+# This is what I consider the short-list of "I'm pulling in too many deps, 
+# let's rewrite this and have fewer deps when we have the energy." 
+base64 = "0.13.0"
+simplelog = "0.11.2"
 uuid = { version = "1.0.0", features = ["serde", "v4"] }
 vu64 = "0.1.5"
 
@@ -46,16 +52,13 @@ rend3 = { version = "^0.2.0", git = "https://github.com/BVE-Reborn/rend3", rev =
 rend3-routine = { version = "^0.2.0", git = "https://github.com/BVE-Reborn/rend3", rev = "c42f758d07e1d9c650d2d5239527bd97f7111cb8" }
 wgpu = { version = "0.12", features = ["spirv"] }
 winit = "0.26.1"
-#profiling = {version = "1", features = ["profile-with-tracy"] }
-#tracing-tracy = "0.8.0"
 
 # Image loading
 image = "0.24.1"
 
-# Possible options for cryptography...
+# Cryptography
 ed25519-dalek = { version = "1.0.1", features = ["serde", "alloc", "batch"]}
 ed25519 = { version = "1.3.0", features = ["alloc", "pem", "serde_bytes"] }
 pkcs8 = { version = "0.8.0", features = ["alloc", "encryption", "pem", "rand", "std"]}
 snow = "0.9"
 signature = "1.5.0"
-# sodiumoxide = "0.2.6"
