--- a/gestalt-core/Cargo.toml
+++ b/gestalt-core/Cargo.toml
@@ -14,10 +14,8 @@ gestalt_names = { path = "../gestalt-names" }
 #byteorder = "1.3.4"
 # crossbeam-channel = "0.5.2"
 chrono = "0.4.19"
-enum_variant_macros = "0.2.0"
 futures = "0.3.19"
 glam = {version = "0.20.2", features = ["serde", "rand"]}
-hashbrown = { version = "0.12.0", features = ["serde"] }
 lazy_static = "1.4.0"
 log = "0.4.11"
 num = "0.4.0"
@@ -35,13 +33,14 @@ thiserror = "1.0.30"
 
 # This is what I consider the short-list of "I'm pulling in too many deps, 
 # let's rewrite this and have fewer deps when we have the energy." 
+# enum_variant_macros = "0.2.0"
 base64 = "0.13.0"
 simplelog = "0.11.2"
 uuid = { version = "1.0.0", features = ["serde", "v4"] }
 vu64 = "0.1.5"
 
 # Network
-laminar = { version = "0.5.1", git = "https://github.com/NotGyro/laminar", rev = "6c73dcf058432d1327558bb8bbbd245a5feaad94" } 
+laminar = { version = "0.5.2", git = "https://github.com/NotGyro/laminar", rev = "23290f37605b52dfde7f1e84a74a4255c8358f4a" } 
 tokio = { version = "1.18", features = ["full", "sync", "rt", "rt-multi-thread", "net", "io-util", "macros", "time"] }
 
 # Scripting
@@ -62,3 +61,6 @@ ed25519 = { version = "1.3.0", features = ["alloc", "pem", "serde_bytes"] }
 pkcs8 = { version = "0.8.0", features = ["alloc", "encryption", "pem", "rand", "std"]}
 snow = "0.9"
 signature = "1.5.0"
+
+# std::collections::HashMap is a hashbrown Hashmap now! It got merged in. 
+# hashbrown = { version = "0.12.0", features = ["serde"] }
