--- a/gestalt-core/Cargo.toml
+++ b/gestalt-core/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 [dependencies]
 #Internal
 gestalt_names = { path = "../gestalt-names" }
+gestalt_proc_macros = { path = "../gestalt-proc-macros" }
+
+toolbelt = "0.0.4"
 
 # External
 #pollster = "0.2.1" # Provides `block_on()` to wait for futures from sync code
@@ -62,5 +65,6 @@ pkcs8 = { version = "0.8.0", features = ["alloc", "encryption", "pem", "rand", "
 snow = "0.9"
 signature = "1.5.0"
 
-# std::collections::HashMap is a hashbrown Hashmap now! It got merged in. 
-# hashbrown = { version = "0.12.0", features = ["serde"] }
+[build-dependencies]
+walkdir = "~2.3.2"
+regex = "~1.5.6"
