--- a/gestalt-core/Cargo.toml
+++ b/gestalt-core/Cargo.toml
@@ -18,6 +18,7 @@ toolbelt = { git = "https://github.com/trashbyte/toolbelt" }
 # crossbeam-channel = "0.5.2"
 chrono = "0.4.19"
 futures = "0.3.19"
+#fxhash = "0.2"
 glam = {version = "0.20.2", features = ["serde", "rand"]}
 lazy_static = "1.4.0"
 log = "0.4.11"
@@ -33,6 +34,7 @@ serde_json = "1.0.79"
 sha2 = "0.10.1"
 string_cache = "0.8"
 thiserror = "1.0.30"
+xxhash-rust = { version = "0.8.5", features = ["xxh3", "const_xxh3"] }
 
 # This is what I consider the short-list of "I'm pulling in too many deps, 
 # let's rewrite this and have fewer deps when we have the energy." 
