--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Install toolchain from rust-toolchain.toml
+        uses: actions-rs/toolchain@v1
+        with:
+            components: rustfmt, clippy
     - name: Build
       run: cargo build --verbose
     - name: Run tests
