--- a/gestalt-core/Cargo.toml
+++ b/gestalt-core/Cargo.toml
@@ -19,7 +19,7 @@ toolbelt = { git = "https://github.com/trashbyte/toolbelt" }
 chrono = "0.4.19"
 futures = "0.3.19"
 #fxhash = "0.2"
-glam = {version = "0.20.2", features = ["serde", "rand"]}
+glam = {version = "0.23", features = ["serde", "rand"]}
 lazy_static = "1.4.0"
 log = "0.4.11"
 num = "0.4.0"
@@ -28,7 +28,7 @@ rand = "0.7"
 rand_core = "0.5"
 rmp = "0.8.10"
 rmp-serde = "1.0.0"
-ron = "0.7.0"
+ron = "0.8"
 serde = { version = "1.0.108", features = ["derive"] }
 serde_json = "1.0.79"
 sha2 = "0.10.1"
@@ -39,8 +39,8 @@ xxhash-rust = { version = "0.8.5", features = ["xxh3", "const_xxh3"] }
 # This is what I consider the short-list of "I'm pulling in too many deps, 
 # let's rewrite this and have fewer deps when we have the energy." 
 # enum_variant_macros = "0.2.0"
-base64 = "0.13.0"
-simplelog = "0.11.2"
+base64 = "0.21"
+simplelog = "0.12"
 uuid = { version = "1.0.0", features = ["serde", "v4"] }
 vu64 = "0.1.5"
 
@@ -49,8 +49,8 @@ laminar = { version = "0.5.2", git = "https://github.com/NotGyro/laminar", rev =
 tokio = { version = "1.20.4", features = ["full", "sync", "rt", "rt-multi-thread", "net", "io-util", "macros", "time"] }
 
 # Rendering
-wgpu = { version = "0.13", features = ["spirv"] }
-winit = "0.26.1"
+wgpu = { version = "0.15", features = ["spirv"] } # Add renderdoc when it gets stabilized
+winit = "0.28"
 
 # Image loading
 image = "0.24.1"
@@ -62,9 +62,12 @@ pkcs8 = { version = "0.8.0", features = ["alloc", "encryption", "pem", "rand", "
 snow = "0.9"
 signature = "1.5.0"
 
+# ECS (There is a strong chance this will be replaced with our own ECS later)
+hecs = { version = "0.10", features = ["serde"]}
+
 [build-dependencies]
 walkdir = "~2.3.2"
-regex = "~1.5.6"
+regex = "~1.7"
 
 [dev-dependencies]
 tempfile = "3.3.0"
