--- a/gestalt-core/Cargo.toml
+++ b/gestalt-core/Cargo.toml
@@ -23,6 +23,7 @@ glam = {version = "0.23", features = ["serde", "rand"]}
 lazy_static = "1.4.0"
 log = "0.4.11"
 num = "0.4.0"
+once_cell = "1.17"
 parking_lot = "0.12.0"
 rand = "0.7"
 rand_core = "0.5"
