--- a/gestalt-core/Cargo.toml
+++ b/gestalt-core/Cargo.toml
@@ -18,6 +18,7 @@ toolbelt = { git = "https://github.com/trashbyte/toolbelt" }
 #byteorder = "1.3.4"
 # crossbeam-channel = "0.5.2"
 chrono = "0.4.19"
+clap = { version = "4.5.19", features = ["derive"] }
 futures = "0.3.19"
 #fxhash = "0.2"
 glam = {version = "0.23", features = ["serde", "rand"]}
