--- a/gestalt-core/Cargo.toml
+++ b/gestalt-core/Cargo.toml
@@ -49,7 +49,7 @@ toml_edit = "0.22.20" # Prefer non-destructive (comment-preserving) toml for use
 
 # Network
 laminar = { version = "0.5.2", git = "https://github.com/NotGyro/laminar", rev = "23290f37605b52dfde7f1e84a74a4255c8358f4a" } 
-tokio = { version = "1.20.4", features = ["full", "sync", "rt", "rt-multi-thread", "net", "io-util", "macros", "time"] }
+tokio = { version = "^1.40", features = ["full", "sync", "rt", "rt-multi-thread", "net", "io-util", "macros", "time"] }
 
 # Rendering
 wgpu = { version = "0.15", features = ["spirv"] } # Add renderdoc when it gets stabilized
